# glassgen

./: .coverage  .gitignore  README.md  basic_demo.csv  cli.py  config.json  demo.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
docs/: .gitignore  next.config.js  next.config.mjs  package-lock.json  package.json  theme.config.jsx
docs/app/: layout.jsx  page.mdx
docs/app/sinks/: _meta.js  page.mdx
docs/app/sinks/ndjson/: page.mdx
docs/app/sinks/webhook/: page.mdx
docs/app/sinks/yield/: page.mdx
docs/pages/: _meta.js  _meta.json  generators.mdx  getting-started.mdx  index.mdx
docs/pages/sinks/: _meta.json  csv.mdx  custom.mdx  index.mdx  json.mdx  kafka.mdx  webhook.mdx  yield.mdx
examples/: config.json  config.yaml  usage.py
glassgen/: __init__.py  cli.py  config.py  generator.py  generators.py  interface.py  schema.py  sinks.py
glassgen/generator/: generator.py  generators.py
glassgen/schema/: base.py  schema.py  user_schema.py
glassgen/sinks/: __init__.py  base.py  bigquery_sink.py  csv_sink.py  json_sink.py  kafka.py  kafka_sink.py  ndjson_sink.py  webhook_sink.py
tests/: conftest.py  test_cli.py  test_config.py  test_generator.py  test_interface.py  test_schema.py  test_sinks.py
