[project]
name = "glassgen"
version = "0.1.0"
description = "A flexible synthetic data generation service"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "faker>=19.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "kafka-python>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
requires-python = ">=3.8"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
glassgen = "glassgen.cli:main" 